# Creating-a-literature-corpus-based-on-Arxiv

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  pyproject.toml
archive/: Corpus paragraphs.docx  instruction manual cleaning text files in visual studio code.rtf
archive/Articles/: ReadMe
archive/Cleaned text files/: 0312010v1.txt  0911.5106v2.txt  1104.3787v3.txt  1107.4777v1.txt  1204.3221v1.txt  1305.1578v2.txt  1505.04497v1.txt  1601.07358v1.txt  1605.03143v1.txt  1606.05593v1.txt  1607.00656v1.txt  1702.08495v2.txt  1703.04361v1.txt  1705.10229v1.txt  1709.03879v1.txt  1710.06574v1.txt  1711.00267v2.txt  1711.08946v2.txt  1712.03080v2.txt  1802.07442v2.txt  1803.08501v1.txt  1803.11347v6.txt  1804.07779v3.txt  1804.08607v1.txt  1804.08685v3.txt  1805.06247v1.txt  1805.07547v1.txt  1805.11016v2.txt  1805.12069v1.txt  1807.04742v2.txt  1808.01363v2.txt  1810.03779v3.txt  1810.04535v1.txt  1810.08163v1.txt  1810.08811v1.txt  1811.03555v1.txt  1811.10264v4.txt  1811.10277v1.txt  1812.00336v3.txt  1812.08451v5.txt  (+279 more)
archive/Codes extracting the corpus/: ReadMe  STEP 1: Downloading results search queries from ArXiv  STEP 2: Sorting the results of the search queries  STEP 3: Removing and counting duplicates  STEP 4: Sorting Output step 3  STEP 5 Finding most common results in search queries, step 1  STEP 6 Finding most common results in search queries
archive/Codes for extracting selections/: Extract colored rows
archive/Files used in extracting the corpus/: ReadMe  STEP 1: Input - Complete list of search combinations  STEP2 - Input.xlsx  STEP2 - Output.xlsx  STEP3 - Output.xlsx  STEP4 - Output.xlsx  STEP5 - Output.xlsx  STEP6 - Output.xlsx
archive/Files used in extracting the corpus/STEP 1: Results search queries/: agent_action_AGI.txt  agent_action_LLM.txt  agent_action_autonomous.txt  agent_action_reinforcement.txt  agent_action_simulation.txt  agent_environment_AGI.txt  agent_environment_LLM.txt  agent_environment_autonomous.txt  agent_environment_reinforcement.txt  agent_environment_simulation.txt  agent_goal_AGI.txt  agent_goal_LLM.txt  (+37 more)
archive/Finalizing the corpus/: Corpus after first and second selection.xlsx  Final corpus.xlsx  First selection corpus.xlsx  ReadMe  Second selection corpus.xlsx
archive/FoLia files/: 0312010v1.xml  0911.5106v2.xml  1104.3787v3.xml  1107.4777v1.xml  1204.3221v1.xml  1305.1578v2.xml  1505.04497v1.xml  1601.07358v1.xml  1605.03143v1.xml  1606.05593v1.xml  1607.00656v1.xml  1702.08495v2.xml  1703.04361v1.xml  1705.10229v1.xml  1709.03879v1.xml  1710.06574v1.xml  1711.00267v2.xml  1711.08946v2.xml  1712.03080v2.xml  1802.07442v2.xml  1803.08501v1.xml  1803.11347v6.xml  1804.07779v3.xml  1804.08607v1.xml  1804.08685v3.xml  1805.06247v1.xml  1805.07547v1.xml  1805.11016v2.xml  1805.12069v1.xml  1807.04742v2.xml  1808.01363v2.xml  1810.03779v3.xml  1810.04535v1.xml  1810.08163v1.xml  1810.08811v1.xml  1811.03555v1.xml  1811.10264v4.xml  1811.10277v1.xml  1812.00336v3.xml  1812.08451v5.xml  (+347 more)
archive/Results annotation/: Annotation Corpus.xlsx  Annotation results agent system.xlsx  Annotation results no agent system.xlsx  Figure Distribution Themes Agent System.xlsx  Figure Distribution Themes No Agent System.xlsx  ReadMe
archive/ground truth/: Annotation Ground Truth .xlsx  ReadMe
config/: default.yaml  test-sample.yaml
docker/: Dockerfile  mongo-init.js
docs/: ORIGINAL_STRUCTURE.md
notebooks/: corpus_analysis.ipynb
src/arxiv_corpus/: __init__.py  cli.py  config.py
tests/: __init__.py  conftest.py
tests/test_acquisition/: __init__.py  test_query.py
tests/test_analysis/: test_term_expander.py
tests/test_embeddings/: test_chunker.py  test_embedder.py  test_retriever.py  test_vector_store.py
tests/test_preprocessing/: __init__.py  test_document_converter.py  test_text_cleaner.py
(+40 files in other folders)
