[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-corpus"
version = "0.1.0"
description = "A generic, reusable system for creating literature corpora from arXiv and analyzing them"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["arxiv", "corpus", "nlp", "literature", "research", "text-mining"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",

    # HTTP & API
    "httpx>=0.27.0",

    # NLP
    "spacy>=3.7.0",

    # PDF Processing
    "pdfplumber>=0.11.0",

    # Data Processing
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "lxml>=5.0.0",

    # Database
    "pymongo>=4.6.0",
    "motor>=3.3.0",  # Async MongoDB driver (for future use)

    # Configuration
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",

    # Linting & Formatting
    "ruff>=0.3.0",
    "mypy>=1.8.0",

    # Type stubs
    "types-PyYAML>=6.0.0",
    "types-tqdm>=4.66.0",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
arxiv-corpus = "arxiv_corpus.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/arxiv-corpus"
Documentation = "https://github.com/yourusername/arxiv-corpus#readme"
Repository = "https://github.com/yourusername/arxiv-corpus"
Issues = "https://github.com/yourusername/arxiv-corpus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_corpus"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/config",
]

# Ruff configuration (replaces flake8, isort, black)
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["arxiv_corpus"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# MyPy configuration
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "spacy.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/arxiv_corpus"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
